# theplace-site

./: CLAUDE.md  index_js  intro.html  jest.config.js  package-lock.json  package.json
__tests__/: HomePage.test.js  supabase.test.js  validation.test.js
amiga500intro/: Makefile  build.sh  copper.s  hardware.i  main.s  scroll.s  tables.s
android_builder/: README.md  __init__.py  __main__.py  cli.py  generator.py  gui.py  interactive.py  pyproject.toml  utils.py
android_builder/templates/: __init__.py  common.py  java_views.py  kotlin_compose.py  kotlin_views.py
c64intro/: Makefile  build.sh  charset.asm  colorwash.asm  fld.asm  irq.asm  logo.asm  main.asm  petscii.asm  rasterbars.asm  setup-c64-dev.sh  shaderpetscii.asm  sid.asm  sinscroll.asm  sprites.asm  tables.asm
c64intro/sid/: README.md  build_sid.sh  sidplayer.asm
c64intro/tools/: gif2sprite.py
c64zoomscroll/: .gitignore  CLAUDE.md  Makefile  build.sh  font_cyber.asm  font_neon.asm  fonts_preview.txt  irq_stable.asm  main.asm  references.md  scroller.asm  tables.asm  test_acme.asm  text.asm
mobile-app/: App.tsx  app.json  package.json
pages/: env_local  index.js  package_json
src/lib/: supabase.js  validation.js
src/pages/: index.js
tools/: audio2sid.py
