[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "android-builder"
version = "0.1.0"
description = "Outil Python pour scaffolder rapidement des applications Android (Kotlin Compose, Kotlin Views, Java)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "android-builder contributors" },
]
keywords = ["android", "scaffolding", "generator", "kotlin", "compose"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
android-builder = "android_builder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_builder*"]
